# 3_weeks_simplon_project

./: .gitignore  README.md  notes_version.md  pyproject.toml  schema.md  script_automatise.sh  script_suppression.sh
SQLAlchemy/: models.py
api_simplon/: main.py
formation_simplon/: schema.md  scrapy.cfg  simplon_scrap.csv
formation_simplon/formation_simplon/: api_main.py  create_db.py  essai.py  import_bdd.py  items.py  middlewares.py  models.py  models_new.py  models_old.py  orm.py  pipelines.py  settings.py
formation_simplon/formation_simplon/model_bdd/: models.py
formation_simplon/formation_simplon/mon_compte_formation/: data.csv  data.json  requete_api.py
formation_simplon/formation_simplon/spiders/: simplon_spider.py
formationscraper/: scrapy.cfg
formationscraper/formationscraper/: create_db.py  items.py  middlewares.py  models.py  pipelines.py  settings.py
formationscraper/formationscraper/spiders/: formationspider.py
mon_compte_formation/: requete_api.py
myenv/: pyvenv.cfg
scripts_azure/: script.sh  script_azure_bdd.sh
scripts_azure_datafactory_etc/: script.sh  script_azure_ressources.sh  script_ressources_azure
