[tool.poetry]
name = "3-weeks-simplon-project"
version = "0.1.0"
description = ""
authors = ["bn-pam <bonneau.pam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
sqlalchemy = "^2.0.31"
scrapy = "^2.11.2"
fastapi = "^0.111.1"
itemadapter = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
