[tool.poetry]
name = "3-weeks-simplon-project"
version = "0.1.0"
description = "Simplon scraper v1 : A scraper to parse automatically Simplon's website, to feed a DBB on azure, DBB generated with a script"
authors = ["bn-pam <bonneau.pam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
scrapy = "^2.11.2"
fastapi = "^0.111.1"
itemadapter = "^0.9.0"
psycopg2 = "^2.9.9"
dateparser = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
